# VoxelChain

./: .gitignore  LICENSE  README.md  docker-compose.yml  network.conf
client/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
client/src/: index.html  main.js  styles.css
client/src/engine/: AICommandServer.js  AIObserver.js  BlockRegistry.js  BlockchainSync.js  Chunk.js  CraftingSystem.js  GameCommandAPI.js  InputController.js  MeshWorker.js  ParticleSystem.js  Pathfinder.js  SkyManager.js  SoundManager.js  SurvivalSystem.js  TerrainGenerator.js  TextureAtlas.js  TouchController.js  UIManager.js  WalletManager.js  WorldManager.js
contracts/: VoxelItems.sol  VoxelLand.sol  hardhat.config.js
explorer/: index.html
landing/: index.html
rpc-bridge/: Dockerfile  pyproject.toml
rpc-bridge/app/: main.py
rpc-bridge/voxelchain_bridge/: __init__.py  __main__.py  config.py  converter.py  crafting.py  economy.py  eth_tx_decoder.py  handlers.py  multiplayer.py  node_client.py  persistence.py  server.py  terrain_gen.py  virtual_blocks.py  voxel_world.py
scripts/: configure-network.py  mine-genesis.py
